# homework_web_8

./: authors.json  consumer.py  main.py  models.py  producer.py  pyproject.toml  quotes.json  upload_data.py
