[tool.poetry]
name = "homework-web-8"
version = "0.1.0"
description = ""
authors = ["yufira <fironovayu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.7.2"
mongoengine = "^0.28.2"
pika = "^1.3.2"
faker = "^25.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
